2007-07-15  Satoshi Nakagawa <artension@gmail.com>

	Added encodings support:
		Latin-3, Latin-4, Latin-7, Latin-9,
		Korean CP949, GBK, GB18030, BIG5,
		KOI-8R, ISO-8859-5, ISO-8859-8.

2007-07-14  Satoshi Nakagawa <artension@gmail.com>

	Added confirmation dialog on quitting.

2007-07-14  Satoshi Nakagawa <artension@gmail.com>

	Added small scroller support on the code level.

2007-07-14  Satoshi Nakagawa <artension@gmail.com>

	Added support for \r as new line.

2007-07-13  Satoshi Nakagawa <artension@gmail.com>

	Changed to parse inputted commands: msg, privmsg, notice, action, nick, quit.

2007-07-13  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, reporting an error even when DCC file sending completed successfully.

2007-07-12  Satoshi Nakagawa <artension@gmail.com>

	Implemented reordering servers and channels.

2007-07-12  Satoshi Nakagawa <artension@gmail.com>

	Completed reorder server tree dialog.

2007-07-12  Satoshi Nakagawa <artension@gmail.com>

	Working on reorder server tree dialog.

2007-07-11  Satoshi Nakagawa <artension@gmail.com>

	Implemented drag and drop operations on channels tab, server dialog.

2007-07-10  Satoshi Nakagawa <artension@gmail.com>

	Completed channels tab on server dialog.
	Fixed a bug, when a talk item is selected, starting add server will create a talk type channel.
	Changed to insert new channel or talk items to an appropriate position.

2007-07-09  Satoshi Nakagawa <artension@gmail.com>

	Implemented leaving comment.
	Implemented invisible user mode.
	Changed to use quit on disconnect from menu.

2007-07-09  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, application crushes when inputted irregular text on current encoding.

2007-07-09  Satoshi Nakagawa <artension@gmail.com>

	Changed encoding defaults, ISO-2022-JP for Japanese, UTF-8 for others.

2007-07-08  Satoshi Nakagawa <artension@gmail.com>

	Added double click servers to connect or disconnect.
	Added double click channels to join or part.
