@@ -22,6 +22,6 @@
 	<key>showFileHierarchyDrawer</key>
 	<true/>
 	<key>windowFrame</key>
-	<string>{{656, 85}, {1057, 1086}}</string>
+	<string>{{644, 69}, {1057, 1086}}</string>
 </dict>
 </plist>
